# ecommerce-wasm

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/graphql/: mod.rs  product.rs
backend/src/models/: product.rs
frontend/: package-lock.json
frontend/src/: App.tsx  ProductList.tsx  apollo.ts
frontend/src/apollo/: client.ts
frontend/src/components/: Navbar.tsx  ProductList.tsx  ProductPage.tsx
frontend/src/graphql/: queries.ts
frontend/src/styles/: Navbar.css  ProductList.css  ProductPage.css  index.css
frontend/src/types/: product.ts
mongodb-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-1ebfcac1-ab28-4b81-909e-96293ed92edd.wt  collection-5c4904f2-fcaa-4547-bf4f-308446a1a46a.wt  collection-a615d8cb-0131-4ac3-aa59-e966e0171a1a.wt  collection-d7874861-185e-4429-9d16-00683bfdf771.wt  index-08e7bb3b-e216-4194-a1bd-8d652bf033ac.wt  index-80d6fef1-585b-4854-8741-716b31a5d132.wt  index-c89fde5e-e3d5-4a67-8da7-a559601224f1.wt  index-d77389e2-ad59-4e54-96fa-587c74274585.wt  index-d89ad976-76b5-4a2b-83bb-9f9072df10aa.wt  sizeStorer.wt
mongodb-data/_tmp/spilldb/: WiredTiger.turtle  WiredTiger.wt
mongodb-data/diagnostic.data/: metrics.2026-01-15T08-42-54Z-00000  metrics.interim
