[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"                  
tokio = { version = "1", features = ["full"] }
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
serde = { version = "1", features = ["derive"] }
mongodb = "3.4.1"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3.31"
